# imp

./: .gitignore  PLAN.md  PROPOSAL.md  README.md
platform/: Cargo.toml  README.md  pyproject.toml
platform/crates/bus/: Cargo.toml  README.md
platform/crates/bus/examples/: demo_pub.rs
platform/crates/bus/src/: lib.rs
platform/crates/bus/tests/: roundtrip.rs
platform/crates/cli/: Cargo.toml  README.md
platform/crates/cli/src/: main.rs
platform/crates/core/: Cargo.toml  README.md
platform/crates/core/src/: keyexpr.rs  lib.rs
platform/crates/hal-contract/: Cargo.toml  README.md
platform/crates/hal-contract/src/: lib.rs
platform/crates/installer/: README.md
platform/crates/module-contract/: Cargo.toml  README.md
platform/crates/module-contract/src/: lib.rs
platform/crates/schemas/: Cargo.toml  README.md  build.rs
platform/crates/schemas/proto/: imp.proto
platform/crates/schemas/src/: lib.rs
platform/crates/service-contract/: Cargo.toml  README.md
platform/crates/service-contract/src/: lib.rs
platform/crates/supervisor/: README.md
platform/crates/tasks/: Cargo.toml  README.md
platform/crates/tasks/src/: lib.rs
platform/crates/ui-host/: README.md
platform/crates/workspace/: Cargo.toml  README.md
platform/crates/workspace/src/: config.rs  lib.rs
platform/hal/camera-basler-gige/: README.md
platform/hal/camera-flir-gige/: README.md
platform/hal/camera-realsense/: README.md
platform/hal/camera-uvc/: README.md
platform/hal/gripper-franka-hand/: README.md
platform/hal/gripper-onrobot/: README.md
platform/hal/gripper-robotiq/: README.md
platform/hal/plc-modbus/: README.md
platform/hal/robot-franka-fr3/: README.md
platform/hal/robot-mujoco-ur5e/: README.md  pyproject.toml
platform/hal/robot-mujoco-ur5e/examples/: send_joint_target.py
platform/hal/robot-mujoco-ur5e/imp_hal_robot_mujoco_ur5e/: __init__.py  __main__.py  driver.py
platform/hal/robot-ur-rtde/: README.md
platform/hal/robot-xarm/: README.md
platform/jobs/calibration-hand-eye/: README.md
platform/jobs/calibration-intrinsics/: README.md
platform/jobs/calibration-samples/: README.md
platform/jobs/object-init/: README.md
platform/jobs/run-task/: README.md  pyproject.toml
platform/jobs/run-task/imp_job_run_task/: __init__.py  __main__.py  job.py
platform/modules/motion-cartesian/: README.md  pyproject.toml
platform/modules/motion-cartesian/imp_module_motion_cartesian/: __init__.py  __main__.py  plan.py
platform/modules/motion-coal/: README.md  pyproject.toml
platform/modules/motion-coal/examples/: verify_collision.py
platform/modules/motion-coal/imp_module_motion_coal/: __init__.py  __main__.py  collision.py
platform/modules/motion-core/: README.md
platform/modules/motion-core/algorithms/: LICENSE  environment.yml  pyproject.toml
platform/modules/motion-core/assets/: catalog.json
platform/modules/motion-grasp-library/: README.md  pyproject.toml
platform/modules/motion-grasp-library/imp_module_motion_grasp_library/: __init__.py  __main__.py  library.py  module.py  synthesize.py
platform/modules/motion-grasp-library/tests/: test_library.py
platform/modules/motion-ompl/: README.md  pyproject.toml
platform/modules/motion-ompl/examples/: verify_plan.py
platform/modules/motion-ompl/imp_module_motion_ompl/: __init__.py  __main__.py  plan.py
platform/modules/motion-path-processor/: README.md  pyproject.toml
platform/modules/motion-path-processor/imp_module_motion_path_processor/: __init__.py  __main__.py  process.py
platform/modules/motion-pinocchio/: README.md  pyproject.toml
platform/modules/motion-pinocchio/examples/: verify_fk.py  verify_ik.py
platform/modules/motion-pinocchio/imp_module_motion_pinocchio/: __init__.py  __main__.py  fk.py  ik.py
platform/modules/motion-ruckig/: README.md  pyproject.toml
platform/modules/motion-ruckig/examples/: verify_traj.py
platform/modules/motion-ruckig/imp_module_motion_ruckig/: __init__.py  __main__.py  trajectory.py
platform/modules/perception-blob/: README.md
platform/modules/perception-cuboid/: README.md
platform/modules/perception-feature/: README.md
platform/modules/perception-fusion/: README.md
platform/modules/perception-megapose/: README.md
platform/modules/perception-opt-sift/: README.md
platform/modules/perception-ppf-icp/: README.md
platform/modules/perception-preview/: README.md
platform/modules/perception-template/: README.md
platform/modules/perception-template-sift/: README.md
platform/modules/perception-track/: README.md
platform/modules/perception-yolo/: README.md
platform/modules/spatial-tf/: README.md  pyproject.toml
platform/modules/spatial-tf/examples/: verify_tf.py
platform/modules/spatial-tf/imp_module_spatial_tf/: __init__.py  __main__.py  graph.py  module.py
platform/modules/spatial-tf/tests/: test_graph.py
platform/modules/spatial-transform/: README.md  pyproject.toml
platform/modules/spatial-transform/examples/: verify_transform.py
platform/modules/spatial-transform/imp_module_spatial_transform/: __init__.py  __main__.py  lift.py  transform.py
platform/modules/spatial-transform/tests/: test_lift.py
platform/sdk/py/: README.md  pyproject.toml
platform/sdk/py/examples/: demo.py
platform/sdk/py/imp_sdk/: __init__.py  bus.py  discover.py  hal.py  keyexpr.py  module.py  testing.py
platform/services/asset-get/: README.md
platform/services/calibration-target/: README.md
platform/services/calibration-tcp/: README.md
platform/services/grasp-define/: README.md
platform/services/pose-library/: README.md
platform/services/robot-digital-twin/: README.md
platform/services/run-store/: README.md  pyproject.toml
platform/services/scene-define/: README.md
platform/services/tf-lookup/: README.md
platform/tests/: test_modules_bus.py  test_scene_fill.py  test_smoke_motion_chain.py  test_task_run.py
platform/tools/dev/: check_docs.py  check_no_reference_leak.py  environment.yml  install_dev.sh
reference/robot-algorithms/algorithms/: README.md  pyproject.toml  requirements.txt
(+666 files in other folders)
