[package]
name = "imp-bus"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
imp-core = { path = "../core" }
imp-schemas = { path = "../schemas" }
zenoh = { workspace = true, features = ["unstable", "internal"] }
prost.workspace = true

[dev-dependencies]
tokio.workspace = true
