[package]
name = "imp-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "imp"
path = "src/main.rs"

[dependencies]
imp-core = { path = "../core" }
imp-bus = { path = "../bus" }
imp-schemas = { path = "../schemas" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
