[package]
name = "imp-schemas"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
