[package]
name = "imp-tasks"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# Scaffold only -- the working Task Runtime is the Python implementation under
# `platform/sdk/py/imp_tasks/`. This Rust crate exists so the workspace builds
# clean and a future sealed engine can land here without churn (same pragma as
# crates/module-contract vs. imp_sdk.module today -- see PLAN.md D2/D11).
[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
