[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imp-module-motion-pinocchio"
version = "0.0.0"
description = "Forward/inverse kinematics imp module wrapping motion-core (Pinocchio)."
requires-python = ">=3.10"
license = { text = "LicenseRef-Proprietary" }
dependencies = [
    "imp-sdk",
    "imp-motion-core",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.entry-points."imp.modules"]
motion-pinocchio = "imp_module_motion_pinocchio:FkModule"

[tool.hatch.build.targets.wheel]
packages = ["imp_module_motion_pinocchio"]
