[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imp-module-motion-ruckig"
version = "0.0.0"
description = "Time-parameterization (trajectory) imp module wrapping motion-core (Ruckig)."
requires-python = ">=3.10"
license = { text = "LicenseRef-Proprietary" }
dependencies = ["imp-sdk", "imp-motion-core", "numpy>=1.24"]

[project.entry-points."imp.modules"]
motion-ruckig = "imp_module_motion_ruckig:TrajectoryModule"

[tool.hatch.build.targets.wheel]
packages = ["imp_module_motion_ruckig"]
