[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithms"
version = "0.1.0"
description = "Small robotics algorithm library with static descriptions and clean I/O."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pydantic",
  "pyyaml",
  "scipy",
  "trimesh",
  "pin",
  "coal",
  "ompl",
  "open3d",
  "meshcat",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
